# codesec

./: .env.example  .github  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_api.py  test_scan.py
.github/workflows/: ci.yml  security-scan.yml
k8s/: deployment.yaml
sample_repos/demo-scan-repo/: README.md  package.json  vulnerable.py
src/api/: __init__.py  main.py
src/data_pipeline/: __init__.py  cve_fetcher.py  github_scraper.py  preprocessor.py
src/integrations/: __init__.py  github_actions.py  github_repo_scanner.py  gitlab_ci.py  jenkins_plugin.py
src/models/: __init__.py  dependency_checker.py  remediation_suggester.py  secret_detector.py  test_generator.py  vulnerability_detector.py
src/web/: Dockerfile  index.html  package-lock.json  package.json
src/web/src/: App.tsx  index.css
src/web/src/api/: client.ts
src/web/src/components/: FileUpload.tsx  Layout.tsx
src/web/src/pages/: Dashboard.tsx  FindingsPage.tsx  ScanPage.tsx  SettingsPage.tsx
tests/: test_api.py  test_data_pipeline.py  test_ml_detector.py  test_models.py
